# FAFiles

./: .env  .env.test  alembic.ini  docker-compose.test.yml  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 077381c83cd5_add_size_to_files.py  213b85fb1ed1_create_users_table.py  45a0b4ceab02_rename_field_name.py
app/: auth.py  config.py  database.py  exceptions.py  main.py  models.py  redis_client.py  schemas.py  services.py
app/routers/: auth.py  resources.py
app/services/: create_service.py  delete_service.py  download_service.py  file_service.py  folder_service.py  main_service.py  minio.py  move_service.py  repository.py  storage.py  utils.py
tests/: conftest.py  test_auth.py  test_delete.py  test_download.py  test_get.py  test_post.py  test_upload.py  utils.py
